fix(patterns/breadcrumb): improve breadcrumb behavior on mobile
Fix #689

--- a/packages/styles/components/_c.breadcrumb.scss
+++ b/packages/styles/components/_c.breadcrumb.scss
@@ -49,32 +49,36 @@
     @include unstyle-list();
 
     display: flex;
+    flex-wrap: wrap;
     margin-bottom: 0;
     margin-top: 0;
   }
 
   &__item {
+    @include set-font-scale('04', 'l');
+
     padding-right: $mu050;
-    background-position: left bottom get-border(s);
+    background-position: left center;
     background-repeat: no-repeat;
     background-size: $mu100;
+    flex-shrink: 0;
 
+    &.is-active,
     &:only-child,
     &:not(:first-child) {
       padding-left: $mu150;
     }
 
     &:not(:first-child) {
-      @include set-from-screen('m') {
+      @include set-from-screen('m-medium') {
         background-image: url(inline-icons('arrow-right-16', $color-grey-800));
       }
     }
 
     &.is-active,
     &:only-child {
-      @media screen and (max-width: 679px) {
+      @media screen and (max-width: ($screen-m-medium - 1)) {
         background-image: url(inline-icons('arrow-left-16', $color-grey-800));
-        background-position: left center;
       }
     }
   }
@@ -112,7 +116,7 @@
 
         &.is-active,
         &:only-child {
-          @media screen and (max-width: 679px) {
+          @media screen and (max-width: ($screen-m-medium - 1)) {
             background-image:
               url(
                 inline-icons(
@@ -129,14 +133,14 @@
     #{$parent} {
       &__item {
         &:not(.is-active) {
-          @media screen and (max-width: 679px) {
+          @media screen and (max-width: ($screen-m-medium - 1)) {
             @include set-hidden-input();
           }
         }
 
         &.is-active {
           .mc-link__icon {
-            @media screen and (max-width: 679px) {
+            @media screen and (max-width: ($screen-m-medium - 1)) {
               transform: rotate(180deg) translateY(-15%);
             }
           }
