--- a/packages/styles/settings-tools/_s.inline-icons.scss
+++ b/packages/styles/settings-tools/_s.inline-icons.scss
@@ -16,11 +16,11 @@
   }
 
   @if $icon == 'arrow-left-16' {
-    @return '<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="#{$fill}"><path d="M10.5 14a1 1 0 01-.71-.29l-5-5a1 1 0 010-1.42l5-5a1 1 0 111.42 1.42L6.91 8l4.3 4.29a1 1 0 010 1.42 1 1 0 01-.71.29z"/></svg>';
+    @return '<svg xmlns="http://www.w3.org/2000/svg" height="1rem" width="1rem" viewBox="0 0 16 16" fill="#{$fill}"><path d="M10.5 14a1 1 0 01-.71-.29l-5-5a1 1 0 010-1.42l5-5a1 1 0 111.42 1.42L6.91 8l4.3 4.29a1 1 0 010 1.42 1 1 0 01-.71.29z"/></svg>';
   }
 
   @if $icon == 'arrow-right-16' {
-    @return '<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="#{$fill}"><path d="M5.5 14a1 1 0 01-.71-.29 1 1 0 010-1.42L9.09 8l-4.3-4.29a1 1 0 011.42-1.42l5 5a1 1 0 010 1.42l-5 5a1 1 0 01-.71.29z"/></svg>';
+    @return '<svg xmlns="http://www.w3.org/2000/svg" height="1rem" width="1rem" viewBox="0 0 16 16" fill="#{$fill}"><path d="M5.5 14a1 1 0 01-.71-.29 1 1 0 010-1.42L9.09 8l-4.3-4.29a1 1 0 011.42-1.42l5 5a1 1 0 010 1.42l-5 5a1 1 0 01-.71.29z"/></svg>';
   }
 
   @if $icon == 'arrow-down-16' {
